fixed todays festivals from overflowing

--- a/app/assets/stylesheets/homes.css.sass
+++ b/app/assets/stylesheets/homes.css.sass
@@ -15,7 +15,8 @@ $brown: #5d3c1d
   left: 600px
   top: 40px
   width: 500px
-  height: 150px
+  height: 151px
+  overflow: hidden
   padding: 0px
   h3
     text-align: center
